objects/User.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(Contact.Account.Name == null, BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC FootPrints Asset Core user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_QV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
        <label>Manage QuickViews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOED_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We will use this field in Workflow Rule. whenever a new user is created it will automatically add to Chatter Group</description>
        <label>DOED_Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Account_2__c</fullName>
        <label>Email Account 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Account_3__c</fullName>
        <label>Email Account 3</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Users_Without_License</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New Users Without License</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
    </validationRules>
</CustomObject>